Created Activity for Login Page and Create User. Created FindFollowers Activity (Works as Intended) Modified Users by adding new dao functions and variables eg password and image data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,7 +23,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.home.nested_fragments.CreateCommentActivity"/>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.fit_connect"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+        <activity android:name=".ui.home.nested_fragments.following_activities.CreateCommentActivity"/>
+        <activity android:name=".ui.UserActivity"/>
+        <activity android:name=".CreateAccountActivity"/>
+        <activity android:name=".ui.home.nested_fragments.following_activities.FindFollowerActivity"/>
     </application>
 
 </manifest>
